# internal/models/user_model.go
@@ -4,9 +4,9 @@ import "go.mongodb.org/mongo-driver/bson/primitive"
 
 type User struct {
 	ID           primitive.ObjectID `bson:"_id,omitempty"`
-	Nome         string             `bson:"nome"`
-	Sobrenome    string             `bson:"sobrenome"`
-	CPF          string             `bson:"cpf"`
+	Name         string             `bson:"name"`
+	LastName     string             `bson:"last_name"`
+	Document	 string             `bson:"document"`
 	Email        string             `bson:"email"`
 	PasswordHash string             `bson:"password_hash"`
 	AddressID    primitive.ObjectID `bson:"address_id,omitempty"`
